--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,28 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  color: white;
+  
+}
+
+div#root {
+  height: 100%;
+}
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: rgb(44,38,144);
+  background: linear-gradient(172deg, rgba(44,38,144,1) 0%, rgba(107,106,167,1) 42%, rgba(0,212,255,1) 100%);
+  height: 100vh;
 }
+
 
 a {
   font-weight: 500;
@@ -25,9 +36,9 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  flex-flow: column;
+  height: 100%;
+  
 }
 
 h1 {
@@ -35,14 +46,20 @@ h1 {
   line-height: 1.1;
 }
 
+#start {
+margin: 0 auto;
+}
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
+  width: clamp(50px, 100px, 200px);
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 1rem;
   cursor: pointer;
   transition: border-color 0.25s;
 }
