transition project to use Tailwind

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,54 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@font-face {
+  font-family: 'Monaco';
+  src: url('../fonts/Monaco.woff')
+}
+
+@font-face {
+  font-family: 'Benz Grotesk';
+  src: url('../fonts/Benz Grotesk.ttf')
+}
+
+@font-face {
+  font-family: 'PPNeueMachina';
+  src: url('../fonts/PPNeueMachina-InktrapRegular.otf');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'PPNeueMachina';
+  src: url('../fonts/PPNeueMachina-InktrapRegular.otf');
+  font-weight: light;
+  font-style: light;
+}
+
+@font-face {
+  font-family: 'PPNeueMachina';
+  src: url('../public/fonts/PPNeueMachina-InktrapUltraBold.otf');
+  font-weight: bold;
+  font-style: bold;
+}
+
+.btn-main {
+  @apply bg-emerald-200 rounded-md p-4 border-sky-950  text-sky-950 font-Monaco text-xl transition ease-in-out delay-75 shadow-none w-[35%];
+}
+
+.btn-main:hover {
+  @apply text-black shadow-sharp -translate-y-1 translate-x-1;
+}
+
+.p-text {
+  @apply font-Monaco text-2xl;
+}
+
+.card {
+  @apply rounded-md border-sky-950
+}
+/* 
 * {
   box-sizing: border-box;
   margin: 0;
@@ -41,6 +92,100 @@ body {
   
 }
 
+.main {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  margin: 1rem;
+}
+
+#start {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding: 1.4rem;
+  margin: 1rem;
+  width: 50%;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 1rem;
+}
+
+#start button {
+  width: 80%;
+}
+
+.categoryLabel {
+  display: block;
+  font-size: 1.5rem;
+}
+
+.selectCategory {
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 0.3rem;
+  border: 1px solid black;
+  padding: 0.6rem;
+  margin: 0.5rem;
+}
+
+select > option {
+  background: black;
+}
+
+select > option:focus {
+  background: red;
+}
+
+#questions {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding: 1.4rem;
+  margin: 1rem;
+  width: 50%;
+  border-radius: 1rem;
+  gap: 1rem;
+}
+
+.card {
+  padding: 1.4rem;
+  margin: 1rem;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 1rem;
+}
+
+button#wrong {
+  border: 1px solid red;
+}
+
+button#correct {
+  border: 1px solid green;
+}
+
+.radio {
+  margin: 1rem;
+}
+
+.section {
+  margin: 1rem;
+  padding: 1rem;
+}
+
+.answer {
+  display: flex;
+  flex-flow: column nowrap;
+  gap: 0.4rem;
+  align-items: center; 
+}
+
+.answer button {
+  width: 100%;
+}
+
+
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
@@ -82,4 +227,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
